--- a/assets/css/BSstyle.css
+++ b/assets/css/BSstyle.css
@@ -7,13 +7,6 @@ body{
     margin: 0;
 }
 
-.container {
-    width: 100%;
-    max-width: 960px;
-    margin: 0 auto;
-    clear: both;
-}
-
 .navbar {
     z-index: 99;
     width: 100%;
@@ -29,7 +22,6 @@ body{
 }
 
 .navbar-brand{
-    margin: 0px 800px 0px 260px;
     float: left;
     width: 250px;
     height: 90px;
@@ -59,7 +51,6 @@ body{
     background-color: white;
     margin-top: 20px;
     margin-bottom: 30px;
-    max-width: 650px;
     border: 1px solid #ddd;
     overflow: auto;
 }
@@ -126,7 +117,7 @@ input {
 }
 
 #messageField {
-   height: 200px;
+   padding-bottom: 50px;
 }
 
 #sendButton {
