--- a/assets/css/UPstyle.css
+++ b/assets/css/UPstyle.css
@@ -33,8 +33,8 @@ a:hover {
 }
 
 .project-pic {
-    max-width: 600px !important;
-    max-height: 600px !important;
+    width: 800px;
+    height: 400px;
 }
 
 .logo-img {
@@ -43,8 +43,8 @@ a:hover {
 
 .centered-button {
     margin-top: 1%;
-    /* color: white; */
 }
+
 h1, h2, h3, h4, h5 {
     font-family: 'Kanit', sans-serif;
     color: lime;
